[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["broker"]


[project]
name = "Broker"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A simple event broker for python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "pubsub", "event", "broker"]
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
    "pytest",
    "pytest-asyncio"
]
version = "1.5.0"


[project.urls]
Homepage = "https://github.com/nate-maxwell/broker"
Source = "https://github.com/nate-maxwell/broker"


[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
