[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["broker*"]

[tool.setuptools.package-data]
broker = ["py.typed"]

[project]
name = "Broker"
authors = [
    {name = "Nathan Maxwell"}
]
description = "A simple event broker for python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "pubsub", "event", "broker"]
classifiers = ["Programming Language :: Python :: 3.10"]

dependencies = ['importlib-metadata; python_version<"3.10"']

version = "2.0.2"


[project.urls]
Homepage = "https://github.com/nate-maxwell/broker"
Source = "https://github.com/nate-maxwell/broker"


[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "tox"
]
typecheck = [
    "mypy>=1.15,<2"
]


[tool.mypy]
files = ["broker"]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
